--- a/.github/workflows/build-hug-image.yml
+++ b/.github/workflows/build-hug-image.yml
@@ -41,7 +41,7 @@ jobs:
           context: .
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/hf-vless:latest
+            ghcr.io/${{ github.repository_owner }}/hug-vless:latest
           labels: |
             org.opencontainers.image.source=https://github.com/${{ github.repository }}
             org.opencontainers.image.description=http server
